--- a/docker-env/app/public/css/app.css
+++ b/docker-env/app/public/css/app.css
@@ -13557,6 +13557,51 @@ a {
   text-decoration: none;
 }
 
+textarea{
+  width: 90%;
+  height: 200px;
+}
 
+
+.auto-splide {
+  width: 100%;
+  margin: 0 auto;
+}
+
+.auto-splide img {
+  width: 100%;
+  height:800px;
+  object-fit: cover;
+}
+
+.splide__arrows{
+  color: #000;
+}
+
+.kasane{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 10;
+  background: rgba(0, 0, 0, 0.267);
+  border-color:rgba(255, 255, 255, 0);
+}
+
+.haikei{
+  position: relative;
+  z-index: 1;
+}
+
+.siro{
+  color: #fff;
+  font-size: 20px;
+  font-weight: 600;
+}
+.sirotai{
+  color: #fff;
+  font-size: 15px;
+  font-weight: 600;
+}
 
 
