--- a/docker-env/app/public/css/app.css
+++ b/docker-env/app/public/css/app.css
@@ -13598,10 +13598,35 @@ textarea{
   font-size: 20px;
   font-weight: 600;
 }
+.kuro{
+  color: #000000;
+  font-size: 20px;
+  font-weight: 600;
+}
 .sirotai{
   color: #fff;
   font-size: 15px;
   font-weight: 600;
+}
+
+.kurotai{
+  color: #000000;
+  font-size: 15px;
+  font-weight: 600;
+}
+
+.sidebar{
+  margin-top: 30px;
+  margin-right: 20px;
+  margin-left: 20px;
+  width: 20%;
+  height: 100%;
+  padding: 20px;
+}
+.content {
+  margin-top: 30px;
+  margin-right: 15%;
+  padding: 20px;
 }
 
 
